--- a/GE.WebAdmin/Content/sx/less/sx-grid-view.less
+++ b/GE.WebAdmin/Content/sx/less/sx-grid-view.less
@@ -9,6 +9,7 @@
 .sx-gv th {
     font-weight: normal;
     border-bottom-width: 1px !important;
+    vertical-align:middle !important;
 }
 
 .sx-gv .ordered-column {
