--- a/GE.WebAdmin/Views/Banners/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Banners/_GridView.cshtml
@@ -18,15 +18,20 @@
                     return string.Format("<i class=\"fa fa-link\"></i>&nbsp;<a target=\"_blank\" href=\"{0}\">{0}</a>", b.Url);
                 } },
                 new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="Title", Caption="Заголовок"},
-                new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="Place", Caption="Позиция"},
+                new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="Place", Caption="Позиция", Template=(b)=> {
+                    return b.Place==SX.WebCore.SxBanner.BannerPlace.Unknown? null : string.Format("<b class=\"text-warning\">{0}</b>", b.Place);
+                } },
+                new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="ShowsCount", Caption="Показов"},
                 new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="ClicksCount", Caption="Кликов"},
+                new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="CTR", Caption="CTR, %"},
                 new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="PictureId", Caption="Картинка", Template=(p)=> {
                 return string.Format("<a data-lightbox=\"roadtrip\" data-title=\"{1}\" data-toggle=\"tooltip\" data-placement=\"left\" title=\"Помотреть картинку\" href=\"{0}\"><i class=\"fa fa-picture-o\"></i></a>", Url.Action(MVC.Pictures.Picture(p.PictureId)), p.Title);
             } }
             },
             PagerInfo = pagerInfo,
             Filter = filter,
-            SortDirections = sortDirections
+            SortDirections = sortDirections,
+            FuncRowCssClass = (b) => b.CTR > 0 ? "success" : null
         },
             new { @class = "table table-condensed table-bordered table-responsive table-striped" }
     )
