--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -397,6 +397,9 @@
                                     <li>
                                         <a href="@Url.Action(MVC.SiteTestBlocks.Index())"> Блоки тестов</a>
                                     </li>
+                                    <li>
+                                        <a href="@Url.Action(MVC.SiteTestQuestions.Index())"> Вопросы тестов</a>
+                                    </li>
                                 </ul>
                             </li>
                         }
