--- a/GE.WebAdmin/Views/SiteTests/_GridView.cshtml
+++ b/GE.WebAdmin/Views/SiteTests/_GridView.cshtml
@@ -14,7 +14,8 @@
             Data = Model,
             Columns = new SxExtantions.SxGridViewColumn<VMSiteTest>[]{
                 new SxExtantions.SxGridViewColumn<VMSiteTest>{FieldName="DateCreate", Caption="Дата создания"},
-                new SxExtantions.SxGridViewColumn<VMSiteTest>{FieldName="Title", Caption="Заголовок"}
+                new SxExtantions.SxGridViewColumn<VMSiteTest>{FieldName="Title", Caption="Заголовок"},
+                new SxExtantions.SxGridViewColumn<VMSiteTest>{FieldName="Description", Caption="Описание"}
             },
             PagerInfo=pagerInfo,
             Filter = filter,
