--- a/GE.WebAdmin/Views/SiteTestBlocks/Edit.cshtml
+++ b/GE.WebAdmin/Views/SiteTestBlocks/Edit.cshtml
@@ -13,12 +13,11 @@
             <form method="post" action="delete">
                 @Html.AntiForgeryToken()
                 @Html.HiddenFor(x => x.Id)
-                <button type="submit" class="btn btn-danger pull-right" onclick="if(!confirm('Удалить запись?')){return false;}">Удалить блок</button>
+                <button type="submit" class="btn btn-danger" onclick="if(!confirm('Удалить запись?')){return false;}">Удалить блок</button>
             </form>
         </div>
     </div>
 }
-<br />
 
 <form method="post" action="edit">
     @Html.AntiForgeryToken()
@@ -35,7 +34,7 @@
         <div class="col-md-6">
             <div class="form-group">
                 @Html.LabelFor(x => x.TestId, new { @class = "control-label" })
-                @Html.EditorFor(x => x.TestId, new { htmlAttributes = new { @class = "form-control", @placeholder = "Выберите тест для привязки" } })
+                @Html.EditorFor(x => x.TestId, new { htmlAttributes = new { @class = "form-control", @placeholder = "Тест для привязки" } })
                 @Html.ValidationMessageFor(x => x.TestId)
             </div>
         </div>
