--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -20,7 +20,7 @@
                             <a href="@Url.Action(MVC.Articles.List())">Статьи</a>
                         </li>
                         <li>
-                            <a href="@Url.Action(MVC.Aphorisms.List())">Афоризмы</a>
+                            <a href="@Url.Action(MVC.Aphorisms.List())">Кратко</a>
                         </li>
                     </ul>
                 </div>
@@ -44,9 +44,6 @@
                         </li>
                         <li>
                             <a href="@Url.Action(MVC.Articles.List())">Статьи</a>
-                        </li>
-                        <li>
-                            <a href="@Url.Action(MVC.Aphorisms.List())">Афоризмы и цитаты</a>
                         </li>
                         <li>
                             <a href="@Url.Action(MVC.Employees.List())">Контакты</a>
