--- a/GE.WebAdmin/Views/Settings/EditSite.cshtml
+++ b/GE.WebAdmin/Views/Settings/EditSite.cshtml
@@ -9,50 +9,45 @@
 {
     <p class="text-success">@message</p>
 }
-<form method="post" action="@Url.Action(MVC.Settings.EditSite())">
+<form method="post" action="@Url.Action(MVC.Settings.EditSite())" autocomplete="off">
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(x => x.OldSiteDomain)
     @Html.HiddenFor(x => x.OldLogoPath)
     @Html.HiddenFor(x => x.OldSiteName)
     @Html.HiddenFor(x => x.OldSiteBgPath)
     @Html.HiddenFor(x => x.OldSiteFaveiconPath)
 
-    <div class="row">
-        <div class="col-md-12">
-            @Html.LabelFor(x => x.SiteName, new { @class = "control-label" })
-            @Html.EditorFor(x => x.SiteName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите наименование сайта" } })
-            @Html.ValidationMessageFor(x => x.SiteName)
-        </div>
+    <div class="form-group">
+        @Html.LabelFor(x => x.SiteDomain, new { @class = "control-label" })
+        @Html.EditorFor(x => x.SiteDomain, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите домен управляемого сайта" } })
+        @Html.ValidationMessageFor(x => x.SiteDomain)
     </div>
-    <br />
-    <div class="row">
-        <div class="col-md-12">
-            @Html.LabelFor(x => x.LogoPath, new { @class = "control-label" })
-            @Html.EditorFor(x => x.LogoPath, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите путь к изображению" } })
-            @Html.ValidationMessageFor(x => x.LogoPath)
-        </div>
+
+    <div class="form-group">
+        @Html.LabelFor(x => x.SiteName, new { @class = "control-label" })
+        @Html.EditorFor(x => x.SiteName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите наименование сайта" } })
+        @Html.ValidationMessageFor(x => x.SiteName)
     </div>
-    <br />
-    <div class="row">
-        <div class="col-md-12">
-            @Html.LabelFor(x => x.SiteBgPath, new { @class = "control-label" })
-            @Html.EditorFor(x => x.SiteBgPath, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите путь к файлу фона" } })
-            @Html.ValidationMessageFor(x => x.SiteBgPath)
-        </div>
+
+    <div class="form-group">
+        @Html.LabelFor(x => x.LogoPath, new { @class = "control-label" })
+        @Html.EditorFor(x => x.LogoPath, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите путь к изображению" } })
+        @Html.ValidationMessageFor(x => x.LogoPath)
     </div>
-    <br />
-    <div class="row">
-        <div class="col-md-12">
-            @Html.LabelFor(x => x.SiteFaveiconPath, new { @class = "control-label" }) <span class="text-info"> (faveicon)</span>
-            @Html.EditorFor(x => x.SiteFaveiconPath, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите путь к файлу фона" } })
-            @Html.ValidationMessageFor(x => x.SiteFaveiconPath)
-        </div>
+
+    <div class="form-group">
+        @Html.LabelFor(x => x.SiteBgPath, new { @class = "control-label" })
+        @Html.EditorFor(x => x.SiteBgPath, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите путь к файлу фона" } })
+        @Html.ValidationMessageFor(x => x.SiteBgPath)
     </div>
-    <br />
-    <div class="row">
-        <div class="col-md-12">
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary">Сохранить</button>
-            </div>
-        </div>
+
+    <div class="form-group">
+        @Html.LabelFor(x => x.SiteFaveiconPath, new { @class = "control-label" }) <span class="text-info"> (faveicon)</span>
+        @Html.EditorFor(x => x.SiteFaveiconPath, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите путь к файлу фона" } })
+        @Html.ValidationMessageFor(x => x.SiteFaveiconPath)
+    </div>
+
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Сохранить</button>
     </div>
 </form>
