--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -514,6 +514,8 @@
         </div>
     </footer>
     <script src="~/Content/dist/js/site.min.js"></script>
+    <script src="~/Content/dist/js/jquery.validate.min.js"></script>
+    <script src="~/Content/dist/js/jquery.unobtrusive-ajax.min.js"></script>
     <script type="text/javascript">
         $(function () {
             $('#side-menu').metisMenu();
