--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -454,6 +454,12 @@
                                             <a href="@Url.Action(MVC.Logs.GetLog(siteName:"game-exe"))"> Скачать лог</a>
                                         </li>
                                     }
+                                    @if (MvcApplication.SiteDomain != null)
+                                    {
+                                        <li>
+                                            <a href="@(string.Format("{0}/api/logs", MvcApplication.SiteDomain))"> Скачать лог сайта</a>
+                                        </li>
+                                    }
                                 </ul>
                             </li>
                         }
