--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -22,6 +22,10 @@
     <a href="@Url.Action(MVC.News.List())" class="btn btn-default btn-transparent white">Все новости</a>
 </div>
 
+<section>
+    @Html.Action("randomlist", "sitetests")
+</section>
+
 @Html.Action(MVC.Articles.ForGamersBlock())
 
 @section scripts{
