--- a/GE.WebUI/Content/less/material.less
+++ b/GE.WebUI/Content/less/material.less
@@ -25,6 +25,7 @@
     width: 100%;
     font-size: 15px;
     line-height: 2;
+    text-align:justify;
     @media (max-width: @screen-xs-max) {
         font-size:16px;
         line-height:1.5;
@@ -49,7 +50,7 @@
 
 .m-html .currency{
     font-size:0.9em;
-    color:@color-black;
+    color:@color-white;
     text-decoration:underline;
 }
 
