--- a/GE.WebAdmin/Views/Pictures/Index.cshtml
+++ b/GE.WebAdmin/Views/Pictures/Index.cshtml
@@ -9,7 +9,7 @@
 
 <h2>@ViewBag.Title</h2>
 <p class="text-warning" style="max-width:600px;">
-    При добалении изображений не допускайте разрастания базы данных. Размер добавляемого файла не должен превышать 300 kB. Перед добавлением рекомендуется сжать изображение специализированным online-сервисом (например <a href="http://resizepiconline.com" rel="nofollow">http://resizepiconline.com</a>)
+    При добалении изображений не допускайте разрастания базы данных. Размер добавляемого файла не должен превышать <b>300 kB</b>. Перед добавлением рекомендуется сжать изображение специализированным online-сервисом (например <a href="http://resizepiconline.com" rel="nofollow" target="_blank"><b>http://resizepiconline.com</b></a>)
 </p>
 <br />
 <div id="grid-pictures">
