--- a/GE.WebUI/Content/less/st-page.less
+++ b/GE.WebUI/Content/less/st-page.less
@@ -12,6 +12,10 @@
     position:relative;
 }
 
+#st-page section .title{
+    color:@color-white;
+}
+
 #st-page section > .desc{
     color:@color-muted-blue;
     margin-bottom:@def-pad*4;
