--- a/GE.WebAdmin/Views/Aphorisms/Index.cshtml
+++ b/GE.WebAdmin/Views/Aphorisms/Index.cshtml
@@ -5,7 +5,14 @@
 }
 
 <h2>@ViewBag.Title</h2>
-<br />
+<div class="form-group">
+    <br />
+    <div class="text-left">
+        <form method="post" action="/aphorisms/report">
+            <button class="btn btn-default" type="submit"><i class="fa fa-file-excel-o" aria-hidden="true"></i> Отчет</button>
+        </form>
+    </div>
+</div>
 
 <div class="panel panel-default">
     <div class="panel-heading"><b>Категории афоризмов</b></div>
