--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">@SX.WebCore.Resources.Settings.adminPanelName @SX.WebCore.Resources.Settings.adminPanelVersion</a>
+                <a class="navbar-brand" href="/">@SX.WebCore.Resources.Settings.adminPanelName @SX.WebCore.Resources.Settings.adminPanelVersion</a><br />
             </div>
 
             <ul class="nav navbar-top-links navbar-right">
@@ -510,7 +510,7 @@
     <footer id="footer">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4">@SX.WebCore.Resources.Settings.adminPanelName</div>
+                <div class="col-md-4">@SX.WebCore.Resources.Settings.adminPanelName<br /><small>Последний старт: @MvcApplication.LastStartDate</small></div>
                 <div class="col-md-8">
                     <div class="pull-right">
                         Разработка и поддержка: <a href="mailto:simlex.dev.2014@gmail.com">simlex.dev.2014@gmail.com</a>
