--- a/GE.WebUI/Views/Articles/DisplayTemplates/Article.cshtml
+++ b/GE.WebUI/Views/Articles/DisplayTemplates/Article.cshtml
@@ -32,7 +32,7 @@
     {
         var video = Model.VideoLinks.First().Video;
         <div class="list-video">
-            @Html.SxVideo(video, SX.WebCore.Providers.VideoProvider.VideoQuality.Medium)
+            @Html.SxVideo(video, SX.WebCore.Providers.SxVideoProvider.VideoQuality.Medium)
         </div>
     }
 
