--- a/GE.WebUI/Views/Games/_LastMaterials.cshtml
+++ b/GE.WebUI/Views/Games/_LastMaterials.cshtml
@@ -20,7 +20,7 @@
                         break;
                 }
                 <li>
-                    <time>@item.DateOfPublication.ToString("dd.MM.yyyy")</time><br />
+                    <span class="time">@item.DateOfPublication.ToString("dd.MM.yyyy")</span><br />
                     <a href="@url">@item.Title</a>
                 </li>
             }
