--- a/GE.WebUI/Views/Shared/_Layout.cshtml
+++ b/GE.WebUI/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 
     <link rel="shortcut icon" href="@("/content/dist/i/faveicon.png")" type="image/png" />
 
-    <link href="~/Content/dist/css/site.min.css" rel="stylesheet" async />
+    <link href="~/Content/dist/css/site.min.css" rel="stylesheet" />
     @RenderSection("styles", false)
 
     <!--[if lt IE 9]>
