--- a/GE.WebUI/Views/Games/DisplayTemplates/VMDetailGameMaterial.cshtml
+++ b/GE.WebUI/Views/Games/DisplayTemplates/VMDetailGameMaterial.cshtml
@@ -43,7 +43,7 @@
         {
             <div class="col-md-2">
                 <div class="video-container">
-                    @Html.SxVideo(Model.Videos[0], SX.WebCore.Providers.VideoProvider.VideoQuality.Medium)
+                    @Html.SxVideo(Model.Videos[0], SX.WebCore.Providers.SxVideoProvider.VideoQuality.Medium)
                 </div>
             </div>
         }
